Zmina używanego API