@@ -53,15 +53,17 @@ class RobotScrappingStarter {
     new Thread(() -> scrapperService.getDataFromBookstores(), "ScrappingThreadCron").start();
   }
 
-  /**
-   * Ensure that app deployed on Heroku do not go sleep. Starts every 15 minutes.
-   */
+  /** Ensure that app deployed on Heroku do not go sleep. Starts every 15 minutes. */
   @Scheduled(cron = "0 */15 * * * *")
   private void wakeUpHerokuApp() {
-    try{
-      new ProcessBuilder("curl -X GET https://bookrobot-front.herokuapp.com/home".split(" ")).start();
+
+    try {
+      LOGGER.info("Wake up Heroku");
+      Process process =
+          Runtime.getRuntime().exec("curl -X GET https://bookrobot-front.herokuapp.com/home");
+      process.waitFor();
       LOGGER.info("Wake up Heroku performed");
-    } catch (IOException e) {
+    } catch (InterruptedException | IOException e) {
       LOGGER.error(e.getMessage());
     }
   }
